fixed overlapping line

--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ p.note {
 section {
   width:600px;
   float:right;
+  padding-left: 50px;
   padding-bottom:50px;
   min-height: 400px;
   overflow: hidden;
